# pymk

./: .copier-answers.yml  .dockerignore  .envrc  .gitignore  .style.yapf  Dockerfile  Dockerfile.local  Jenkinsfile  README.md  flake.nix  mypy.ini  noxfile.py  pyproject.toml  pyrightconfig.json  setup.cfg
container/: distrobox.ini
mktech/: xdg.py
mktech/config/: __init__.py
mktech/date_time/: __init__.py
mktech/error/: __init__.py
mktech/json/: __init__.py
mktech/log/: __init__.py
mktech/os/: __init__.py
mktech/path/: __init__.py
mktech/toml/: __init__.py
mktech/validate/: __init__.py
python/: noxfile.py  pyproject.toml
src/mktech/cli/: __init__.py
src/mktech/config/: __init__.py
src/mktech/config2/: __init__.py
src/mktech/date_time/: __init__.py
src/mktech/error/: __init__.py  error.py  result.py  subclass.py
src/mktech/log/: __init__.py  callable.py
src/mktech/os/: __init__.py
src/mktech/resources/: __init__.py
src/mktech/subprocess/: __init__.py
src/mktech/toml/: __init__.py
src/mktech/xdg/: __init__.py
test/: util.py
test/config/: test_config.py
test/data/: config.toml  config_invalid.toml  config_schema.json
test/json/: test_json.py
test/resources/: test_resources.py
test/toml/: test_toml.py
tests/: util.py
tests/config/: test_config.py
tests/config2/: test_config2.py
tests/config2/data/: config.toml
tests/data/: config_default.json
tests/date_time/: test_date_time.py
tests/error/: test_error.py
tests/json/: test_json.py
tests/log/: test_log.py
tests/resources/: test_resources.py
tests/subprocess/: test_subprocess.py
tests/subprocess/resources/: count.py
tests/toml/: test_toml.py
