[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mktech"
dynamic = ["version"]
description = "mktech standard library"
authors = [{name = "Fritz Mahnke", email = "fritz@mahnke.tech"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "tomlkit>=0.13.2",
    "result>=0.17.0",
    "jsonschema>=4.23.0",
    "pexpect>=4.9.0",
    "click>=8.1.8",
    "pydantic-settings>=2.8.1",
    "pydanclick[griffe]>=0.5.1"
]

[project.urls]
Homepage = "https://fmahnke.github.io/mktech"
Documentation = "https://fmahnke.github.io/mktech"
Changelog = "https://fmahnke.github.io/mktech/changelog"
Repository = "https://github.com/fmahnke/mktech"
Issues = "https://github.com/fmahnke/mktech/issues"
Discussions = "https://github.com/fmahnke/mktech/discussions"

[dependency-groups]
dev = [
    "types-jsonschema>=4.23.0.20240813",
    "types-pexpect>=4.9.0.20241208",
    "mktech-dev-tools[check,debug,doc,lsp-pyright,lsp-python-lsp-server] @ git+https://github.com/fmahnke/py-mktech-dev-tools@0.1.0",
]

[tool.coverage.run]
branch = true
parallel = true
source = [ "mktech" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.pylsp-mypy]
enabled = true
follow-imports = "normal"
report_progress = true

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/"]

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

